k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: safework
  namespace: safework
  labels:
    app: safework
    version: v2
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 32301
    protocol: TCP
    name: http
  selector:
    app: safework
